--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["mielesantos <mielesnts@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.111.0"
+pydantic = {extras = ["email"], version = "^2.7.4"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
